# pith-train

./: 8x4090_Reproduction_Plan.md  CLAUDE.md  CONTRIBUTING.md  Incremental_Learning_Notes.md  PithTrain_vs_MegatronLM_对比分析.md  PithTrain_五类面试能力应对.md  PithTrain_面试深挖准备.md  README.md  pyproject.toml
.claude/skills/add-memory-prints/: SKILL.md
.claude/skills/add-new-model/: SKILL.md
.claude/skills/estimate-memory/: SKILL.md
.github/workflows/: claude-code-review.yml  claude.yml
benchmarks/operators/: bench_ring_attention.py
benchmarks/pretraining/deepseek-v2-lite/: setup.py
benchmarks/pretraining/gpt-oss-120b/: setup.py
benchmarks/pretraining/qwen3-30b-a3b/: setup.py
docs/: architecture.md  user-guide.md
examples/convert_checkpoint/: README.md
examples/pretrain_lm/: README.md  launch.sh
examples/pretrain_lm/deepseek-v2-lite/: script.py
examples/pretrain_lm/gpt-oss-120b/: script.py
examples/pretrain_lm/gpt-oss-20b/: script.py
examples/pretrain_lm/qwen3-30b-a3b/: script.py
examples/tokenize_corpus/: README.md  launch.sh
examples/tokenize_corpus/dclm-deepseek-v2/: script.py
examples/tokenize_corpus/dclm-gpt-oss/: script.py
examples/tokenize_corpus/dclm-qwen3/: script.py
paper/arXiv-2605.31463v1/: 00README.json  neurips_2026.sty  neurips_2026.tex  reference.bib
pithtrain/: config.py
pithtrain/layers/: deepgemm_fp8_linear.py
pithtrain/models/: deepseek_v2_lite.py  qwen3_30b_a3b.py  qwen3_moe.py
pithtrain/modules/: checkpoint.py  load_balance.py  optimizer.py  training.py
pithtrain/operators/: flash_attn_v4.py  ring_attention.py
pithtrain/tasks/: pretrain_language_model.py  pretrain_lm.py  tokenize_corpus.py
tests/: test_fsdp.py  test_fsdp.sh  test_muon.py  test_muon_checkpoint.py  test_muon_fp8.py  test_muon_fsdp.py
tests/operators/: test_ring_attention.py
tools/memory_estimator/: __main__.py
tools/tests/: test_memory_estimator.py
(+24 files in other folders)
