[project]
name = "pithtrain"
version = "0.1.2"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "deep-gemm",
    "flash-attn-4[cu13]>=4.0.0b16",
    "torch>=2.12.0",
    "transformers",
    "wandb",
    "zstandard",
]

[dependency-groups]
dev = ["pre-commit", "pytest", "ruff"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61"]

[tool.setuptools.packages.find]
include = ["pithtrain*"]

[tool.uv]
# Exclude the redundant `-libs-base` wheel. It and `-libs-cu13` ship the same file
# paths with different content, so a parallel `uv sync` can race into a broken mix
# that breaks FA4's cute-dsl JIT (depends on the install filesystem, not the Python
# version). cu13 is a strict superset of base, so nothing is lost. NVIDIA/cutlass#3259.
# `override-dependencies` with a never-true marker is uv's idiom for dropping a dep.
override-dependencies = [
    "nvidia-cutlass-dsl-libs-base; python_version < '0'",
]

[[tool.uv.index]]
name = "torch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
deep-gemm = { git = "https://github.com/deepseek-ai/DeepGEMM", branch = "main" }
torch = { index = "torch-cu130" }

[tool.uv.extra-build-dependencies]
deep-gemm = [
    "torch>=2.12.0",
    "packaging",
    "setuptools",
    "wheel",
]
[tool.uv.extra-build-variables]
deep-gemm = { DG_FORCE_BUILD = "1", DG_USE_LOCAL_VERSION = "0" }

[tool.mypy]
follow_imports = "skip"
ignore_errors = false
ignore_missing_imports = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
ignore = ["E501", "E731"]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["pithtrain"]
